--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Shoes">Shoes</a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Backpack">Backpack</a>
+                  <a class="nav-link" href="#backpack">Backpack</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#Subscribe" >Subscribe</a>
+                  <a class="nav-link" href="#subscribe" >Subscribe</a>
                 </li>
               </ul>
             </div>
@@ -87,10 +87,114 @@
             </a>
           </div>
     </div>
+<div class="container categories">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="d-flex align-items-center justify-content-between cat1">
+        <h2>Watch</h2>
+        <img src="images/categories/watch.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="d-flex align-items-center justify-content-between cat2">
+        <h2>Bag</h2>
+        <img src="images/categories/bag.png" alt=""> 
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="d-flex align-items-center justify-content-between cat3">
+        <h2>Shoes</h2>
+        <img src="images/categories/shoes.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container shoes" id="shoes">
+    <div class="row">
+      <h2>Shoes</h2>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Supply 350</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5>$120</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Nike 360</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.pporting text below as a natura.</p>
+            <h5>$320</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Airmax</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+            <h5>$350</h5>
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+<div class="container" id="backpack">
+    <div class="row">
+      <h2>Backpack</h2>
+      <div class="card-deck">
+        <div class="card">
+          <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red Bag</h5>
+            <h5>$120</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Blue bag</h5>
+            <h5>$320</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Black Bag</h5>
+            <h5>$169</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <button class="buy-now-button">Buy Now >></button>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 
-
-
-
+<div class="container d-flex justify-content-center orange-bg align-items-center" id="subscribe">
+    <div class="">
+      <h3>LET'S STAY IN TOUCH</h3>
+      <h6>Get updates on sales, special and more</h6>
+      <input type="text">
+      <button class="buy-now-button">SUBMIT</button>
+    </div>
+</div>
+<footer>
+  <p>&copy;2020 Panda Commerce. All Rights Reserve. Sofia,Bulgeria</p>
+</footer>
 
 
 
